apps/alloy-logs/base/alloy-logs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: iaas-wcooke-me
    forecastle.stakater.com/appName: Alloy Logs
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/group: Observability
    forecastle.stakater.com/icon: https://alloy-logs.apps.iaas.wcooke.me/favicon.ico
    forecastle.stakater.com/network-restricted: "false"
  name: alloy-ui
spec:
  ingressClassName: cilium
  rules:
  - host: alloy-logs.apps.iaas.wcooke.me
    http:
      paths:
      - backend:
          service:
            name: alloy
            port:
              number: 12345
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - alloy-logs.apps.iaas.wcooke.me
    secretName: alloy-logs-ingress-cert
